# DrogonAdmin

./: .gitmodules  LICENSE  README.md
backend/: .clang-format  .gitignore  CMakeLists.txt  config.json  init.sql  main.cc
backend/adapter/driven/persistence/: DeptCqrsRepo.cc  DeptRepository.cc
backend/adapter/driving/restful/: AuthController.cc  AuthController.h  DeptController.cc  DeptController.h
backend/application/: AuthService.cc  AuthService.h  DeptAssembler.cc  DeptAssembler.h  DeptCqrsRepo.h  DeptCreateRequest.cc  DeptCreateRequest.h  DeptResponse.cc  DeptResponse.h  DeptService.cc  DeptService.h  DeptUpdateRequest.cc  DeptUpdateRequest.h  LoginRequest.cc  LoginRequest.h  LoginResponse.cc  LoginResponse.h
backend/common/exception/: BusinessException.cc  BusinessException.h
backend/common/framework/: DrAdminObject.hpp
backend/common/framework/domain/: AuditableEntity.cc  AuditableEntity.h  ChangeableEntity.cc  ChangeableEntity.h
backend/common/util/: ParamGetter.hpp  Utilities.hpp
backend/domain/: Dept.cpp  Dept.h  DeptHandler.cc  DeptHandler.h  DeptRepository.h  DeptVerifier.cc  DeptVerifier.h
backend/models/: model.json
frontend/: .gitignore  .prettierrc  index.html  package.json  tsconfig.json  vite.config.js
frontend/src/: App.vue  main.ts
frontend/src/api/: auth.ts  user.ts
frontend/src/assets/: common.scss
frontend/src/layouts/: AdminLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  common.ts
frontend/src/types/: auth.d.ts  common.d.ts  guard.ts  menu.d.ts  user.d.ts
frontend/src/utils/: request.ts
(+20 files in other folders)
